fix: delete wrong margin

--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@ body {
 .intro__image {
   display: block;
   margin: 0 0 24px;
-  margin: 0 auto;
 }
 
 .intro__list {
